--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+WDS_SOCKET_PORT=443
+REACT_APP_BACKEND_URL=https://100fbc48-303d-4006-89db-8f09d429a74e.preview.emergentagent.com
